[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "st-uhubm"
version = "0.1.0"
description = "Manage StarTech Industrial USB Hubs from Python API, a CLI, and a web GUI. Unofficial."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Ander Lee"}]
keywords = ["usb", "hub", "startech", "testing", "switch", "embedded", "ci", "st-uhubm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Testing",
]
dependencies = ["click>=8.1"]

[project.optional-dependencies]
gui = ["nicegui>=2.0"]
docs = ["sphinx>=7", "sphinx-rtd-theme>=2"]

[project.scripts]
stuhubm = "st_uhubm.cli:main"
stuhubm-gui = "st_uhubm.gui:run"

[project.urls]
Homepage = "https://github.com/anderlee-nordic/st-uhubm"
Documentation = "https://st-uhubm.readthedocs.io/"
Issues = "https://github.com/anderlee-nordic/st-uhubm/issues"
Source = "https://github.com/anderlee-nordic/st-uhubm"

[tool.hatch.build.targets.wheel]
packages = ["src/st_uhubm"]
